--- a/assets/translation/tr.json
+++ b/assets/translation/tr.json
@@ -7,5 +7,7 @@
   "wannaDelete": "Pozmak isleýärsiňizmi?",
   "themeMode": "Tema",
   "darkMode": "Dara tema",
-  "lightMode": "Ýagty tema"
+  "lightMode": "Ýagty tema",
+  "addAddress": "Salgy goşmak",
+  "selectAddress": "Salgyny saýlaň"
 }
